apep_0149/v4/REPLICATION.md
# Replication Package: apep_0160

This folder contains all code and data needed to replicate the analysis.

## Requirements

- Python 3.10+
- Required packages: See below (or `requirements.txt` if present)

```bash
pip install pandas numpy statsmodels matplotlib
```

## Data

Data is fetched from the Census PUMS API (no API key required for basic queries).

**Cached data files:**
- `acs_clean.csv`
- `acs_nonpostpartum_lowinc.csv`
- `acs_postpartum.csv`
- `acs_postpartum_highinc.csv`
- `acs_postpartum_lowinc.csv`
- `acs_pums_raw.csv`
- `analysis_panel.csv`
- `bfs_data.csv`
- `cpi_data.csv`
- `main_results.rds`
- `mw_panel.csv`
- `permutation_distribution.rds`
- `robustness_results.rds`
- `state_info.csv`
- `state_year_nonpp_lowinc.csv`
- `state_year_postpartum.csv`
- `state_year_postpartum_lowinc.csv`
- `summary_stats.csv`
- `treatment_dates.csv`
- `treatment_timing.csv`

## Code

**Scripts (run in order):**
- `00_packages.R`
- `01_fetch_data.R`
- `02_clean_data.R`
- `03_main_analysis.R`
- `04_robustness.R`
- `05_figures.R`
- `06_tables.R`

## Replication Instructions

1. Install requirements:
   ```bash
   pip install pandas numpy statsmodels matplotlib
   # For R scripts: install.packages(c("did", "fixest", "ggplot2"))
   ```

2. Run the analysis scripts in order:
   ```bash
   cd code/
   # For Python scripts:
   python 01_fetch_data.py    # Downloads data
   python 02_analysis.py      # Runs main analysis
   python 03_figures.py       # Generates figures
   
   # For R scripts:
   Rscript 01_fetch_data.R
   Rscript 02_analysis.R
   Rscript 03_figures.R
   ```

3. Scripts are numbered in execution order (01_, 02_, etc.).

## Data Source

Census PUMS (Public Use Microdata Sample)
- API: https://api.census.gov/data/{YEAR}/acs/acs1/pums
- Documentation: https://www.census.gov/programs-surveys/acs/microdata.html
- No API key required for basic queries

## Notes

- Scripts may contain hardcoded paths that need adjustment
- Cached JSON files allow replication without re-downloading
- For full replication from scratch, delete JSON files and re-run fetch scripts

---
Generated by APEP publish_paper.py
